--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ a.logo {
   font-size: 24px;
   line-height: 1;
   background-color: #FCFF77;
+  cursor: pointer;
   
 }
 
@@ -719,6 +720,7 @@ header .btn.orange:hover {
   background-color: #000;
   padding: 20px;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .input-container {
