--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
   width: 100%;
   align-items: center;
   box-sizing: border-box;
+  height: 100px;
 }
 
 .navbar a{
@@ -116,10 +117,11 @@ a.logo {
 @media (max-width: 666px) {
   .navbar .logo{
     font-size: 4vw;
+    margin-top: -15px;
+    margin-right: 10px;
   }
   .menu-hamburger{
     position: absolute;
-    margin-top: 10px;
     right: 50px;
     width: 35px;
   }
@@ -213,28 +215,33 @@ a.logo {
   bottom: 20px;
   right: 20px;
   width: 40px;
-  font-size: 24px;
-  line-height: 1;
-  background-color: #FCFF77;
+  height: 40px;
+  background-color: #C46B17; /* Couleur de fond du bouton */
+  background-image: url(photos/arrow%20up.png); /* Utilisez le chemin relatif vers votre image */
+  background-size: contain; /* Ajuster la taille de l'image pour qu'elle s'adapte sans dépasser */
+  background-repeat: no-repeat; /* Éviter la répétition de l'image */
+  background-position: center; /* Centrer l'image */
   cursor: pointer;
-  
+  display: none;
+  border-radius: 24px;
 }
+
+
 
 /* Style bouton dans le header */
 header .btn {
   background-color: #fff;
-  color: #381DDB;
+  color: #C46B17;
   margin-left: 20px;
 }
 
 header .btn.orange {
   background-color: #fff;
-  color: #381DDB;
+  color: #C46B17;
 }
 
 header .btn.orange:hover {
-  background-color: #381DDB;
-  color: #fff;
+  background-color: #C46B17;
 }
 /* Style bouton */
 
@@ -271,6 +278,7 @@ header .btn.orange:hover {
   width: 80%;
   margin-bottom: 165px;
   color: #FEFFDD;
+  line-height: 1.8;
 }
 
 .slide2 .right {
@@ -306,9 +314,11 @@ header .btn.orange:hover {
   margin-top: 20px;
   color: #fff;
   text-align: center;
-  top: 50%;
+  top: 45%;
   left: 10%;
   position: absolute;
+  font-size: 30px;
+  text-shadow: 1px 1px 0 #000000;
 }
 @media (max-width: 1290px) {
   .slide2 .right {
@@ -357,6 +367,7 @@ header .btn.orange:hover {
   font-size: 20px;
   margin-bottom: 40px;
   text-align: center;
+  line-height: 1.8;
 }
 
 .slide3 .btn {
@@ -661,121 +672,12 @@ header .btn.orange:hover {
   }
 }
 /*/ Slide 5*/
-/* Slide 6*/
-.slide6 {
-  display: flex;
-  justify-content: space-between;
-  background-color: #000;
-  height: 60vh;
-}
-
-.left6 h1 {
-  margin: 20px;
-  top: 50px;
-}
-
-.left6 h2 {
-  margin: 20px;
-  top: 25px;
-}
-
-.left6 {
-  background-color: #C46B17;
-  color: white;
-  padding: 20px;
-  position: relative;
-  width: 50%;
-  display: inline-block;
-}
-
-.text6 {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-  margin: 20px;
-}
-
-.text6 img {
-  margin-right: 10px;
-}
-
-.shape-img {
+/* Footer */
+.footer{
   position: absolute;
   bottom: 0;
-  right: 0;
-  width: max-content;
-}
-.right6 {
-  background-color: #000;
-  padding: 20px;
-  width: 50%;
 }
 
-.right6 h3 {
-  margin-bottom: 20px;
-  color: #fff;
-  font-size: 32px;
-}
-
-.contact-section {
-  background-color: #000;
-  padding: 20px;
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-.input-container {
-  margin-bottom: 10px;
-}
-
-.input-container label {
-  color: #FFFFFF;
-  display: block;
-  margin-bottom: 15px;
-}
-
-.input-container input,
-.input-container textarea {
-  width: 100%;
-  padding: 10px;
-  background-color: #000;
-  color: #fff;
-}
-
-.input-container textarea {
-  height: 100px;
-}
-
-.submit-button {
-  background-color: #C46B17;
-  color: #FFFFFF;
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 24px;
-  width: 100%;
-}
-
-.submit-button:hover {
-  background-color: #A05310;
-}
-@media screen and (max-width: 1000px) {
-  .slide6 {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-
-  .left6, .right6 {
-    width: 100%;
-    flex-direction: column;
-  }
-
-  .shape-img{
-    z-index: -1;
-    width: auto;
-  }
-}
-/* Slide 6 */
-/* Footer */
 .footer-container {
   width: 100%;
   display: flex;
@@ -820,5 +722,403 @@ header .btn.orange:hover {
     font-size: 20px;
   }
 }
+/* Footer */
+/* Contact */
+.contact-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
+
+.section-info {
+  background-color: #000000;
+  color: #FF9C3F;
+  width: calc(50% - 20px);
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.section-info h1 {
+  font-size: 28px;
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.section-info p {
+  font-size: 18px;
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.contact-info p {
+  font-size: 20px;
+  margin-top: 40px;
+}
+
+.contact-phone, .contact-mail, .contact-location {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.contact-location{
+  margin-bottom: 50px;
+}
+
+.contact-phone img, .contact-mail img, .contact-location img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  margin-top: 40px;
+}
+
+.section-form {
+  width: calc(60% - 20px);
+  padding: 20px;
+  margin: 20px;
+  background-color: #FFFFFF;
+}
+
+.form-row {
+  margin-bottom: 15px;
+  margin-right: 50px;
+  margin-top: 70px;
+}
+
+.form-column {
+  display: inline-block;
+  width: 48%; /* Ajustez la largeur selon vos besoins */
+}
+
+.btnsend {
+  background-color: #C46B17;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 15px 30px;
+  border-radius: 24px;
+  float: right;
+  margin-right: 50px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #CCCCCC;
+  border-radius: 4px;
+}
+
+textarea{
+  resize: none;
+}
+
+@media screen and (max-width: 1210px) {
+  .navbar{
+    height: 100px;
+  }
+  .contact-container {
+    flex-direction: column; /* Affiche les sections l'une au-dessus de l'autre */
+    height: 140vh;
+  }
+
+  .section-info, .section-form {
+    width: calc(100% - 20px);
+    margin: 20px;
+  }
+
+  .section-info {
+    display: flexbox ;
+    order: 1; /* Inverse l'ordre pour que section-info soit au-dessus */
+    margin-bottom: -320px;
+  }
+
+  .section-info h1, .section-info p {
+    text-align: center;
+  }
+  
+  .section-form {
+    display: flexbox;
+    order: 2;
+    flex-direction: column; /* Affiche les éléments en colonne */
+    max-width: 80%;
+    margin-top: 400px;
+  }
+
+  .form-column {
+    width: 100%; /* Utilisez la largeur complète en colonne */
+    margin-bottom: 20px;
+  }
+
+  .form-row{
+    margin-top: 20px;
+  }
+
+  .contact-info {
+    align-items: center; /* Centre les éléments */
+    text-align: center; /* Centre le texte */
+    flex-direction: column;
+  }
+
+  .contact-phone, .contact-mail, .contact-location {
+    justify-content: center; /* Centre horizontalement */
+    margin-top: 20px;
+  }
+
+  .contact-location {
+    margin-bottom: 20px; /* Réduit la marge inférieure */
+  }
+}
+
+@media screen and (max-width:1024px) {
+  .contact-location p {
+    margin-bottom: 20px;
+  }
+
+  .section-info{
+    margin-top: 130px;
+  }
+
+  .section-form{
+    margin-top: 340px;
+  }
+  .contact-container{
+    height: 190vh;
+  }
+} 
+
+@media screen and (max-width:720px) {
+  .contact-location p {
+    margin-bottom: 20px;
+  }
+
+  .section-info{
+    margin-top: 130px;
+  }
+
+  .section-form{
+    margin-top: 340px;
+  }
+  .contact-container{
+    height: 165vh;
+  }
+}
+
+@media screen and (max-width:528px) {
+  .section-info{
+    margin-top: 80px;
+  }
+
+  .section-form{
+    margin-top: 340px;
+  }
+
+}
+@media screen and (max-width:399px) {
+  .section-info{
+    margin-top: 100px;
+  }
+
+  .section-form{
+    margin-top: 340px;
+  }
+  .contact-container{
+    height: 150vh;
+  }
+}
+@media screen and (max-width:371px) {
+  .section-info{
+    margin-top: 120px;
+  }
+
+  .section-form{
+    margin-top: 320px;
+  }
+  .contact-container{
+    height: 175vh;
+  }
+}
+@media screen and (max-width:340px) {
+  .contact-info p{
+    max-width: 80%;
+  }
+  .section-info{
+    margin-top: 150px;
+  }
+
+  .section-form{
+    margin-top: 360px;
+  }
+}
+
+@media screen and (max-width:331px) {
+  .section-info{
+    margin-top: 160px;
+  }
+
+  .section-form{
+    margin-top: 340px;
+  }
+}
+@media screen and (max-width:301px) {
+  .section-info{
+    margin-top: 150px;
+  }
+
+  .section-form{
+    margin-top: 320px;
+  }
+}
+@media screen and (max-width:281px) {
+  a.logo{
+    left: 2vw;
+  }
+  
+  .section-info{
+    margin-top: 150px;
+  }
+
+  .section-form{
+    margin-top: 320px;
+  }
+  .contact-container{
+    height: 220vh;
+  }
+}
+
+/* Contact */
+/* artist */
+.artistes {
+  z-index: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 120px;
+}
+
+.boite {
+  width: calc(25%);
+  background-color: #000;
+  box-sizing: border-box;
+  position: relative; 
+  overflow: hidden;
+}
+
+.photo {
+  width: 100%;
+  height: 480px;
+  position: relative;
+  border: 1px solid #FF9C3F;
+  transition: filter 0.3s; 
+}
+
+.photo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Cacher le logo Spotify par défaut */
+.spotify-logo {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 10px;
+  height: auto;
+  opacity: 0.8;
+  z-index: 2;
+  max-width: 35%;
+  max-height: 25%;
+}
+
+/* Afficher le logo Spotify au survol de la photo */
+.photo:hover .spotify-logo {
+  display: block;
+  filter: none;
+}
+
+.photo:hover img.artist-img {
+  filter: blur(4px);
+}
+
+/* Réduire la taille de l'image Spotify et la rendre nette */
+.photo:hover img.spotify-img {
+  width: 30px; /* Ajustez la largeur selon vos préférences */
+  height: auto;
+  filter: none; /* Annuler le filtre de flou sur le logo Spotify */
+}
+.infos {
+  background-color: rgba(0, 0, 0, 0.8); 
+  padding: 10px;
+  box-sizing: border-box;
+  color: #FF9C3F;
+  position: absolute; 
+  bottom: 0;
+  width: 100%;
+  opacity: 0; 
+  transition: opacity 0.5s;
+}
+
+.boite:hover .infos {
+  opacity: 1;
+}
+
+.infos h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.infos p {
+  font-size: 18px;
+  text-align: right;
+}
+
+@media (max-width: 1400px) {
+  .boite {
+    width: calc(33%);
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 1210px) {
+  .boite {
+    width: calc(50%);
+    margin-bottom: 0; 
+  }
+}
+@media (max-width: 800px) {
+  .boite {
+    width: calc(100%);
+    margin-bottom: 0; 
+  }
+}
+/* artist */
 
 
