--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ header .btn.orange:hover {
   overflow: hidden;
   background-color: #000;
   position: relative;
+  pointer-events: none;
 }
 
 
@@ -637,6 +638,7 @@ header .btn.orange:hover {
   text-align: center;
   display: block;
   margin: 20px;
+  pointer-events: none;
 }
 
 .slide5 h1 {
@@ -1071,7 +1073,6 @@ textarea{
 .photo:hover img.spotify-img {
   width: 30px; /* Ajustez la largeur selon vos préférences */
   height: auto;
-  filter: none; /* Annuler le filtre de flou sur le logo Spotify */
 }
 .infos {
   background-color: rgba(0, 0, 0, 0.8); 
@@ -1120,5 +1121,70 @@ textarea{
   }
 }
 /* artist */
-
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Couleur semi-transparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Assure que l'écran de chargement est au-dessus de tout le contenu */
+}
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  border: 3px solid;
+  border-color: #FF9C3F #FF9C3F transparent transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after,
+.loader::before {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 3px solid;
+  border-color: transparent transparent #000 #000;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: rotationBack 0.5s linear infinite;
+  transform-origin: center center;
+}
+.loader::before {
+  width: 32px;
+  height: 32px;
+  border-color: #FF9C3F #FF9C3F transparent transparent;
+  animation: rotation 1.5s linear infinite;
+}
+    
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+@keyframes rotationBack {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+    
 
