--- a/style.css
+++ b/style.css
@@ -745,6 +745,7 @@ header .btn.orange:hover {
   padding: 20px;
   margin: 20px;
   border-radius: 10px;
+  margin-top: 100px;
 }
 
 .section-info h1 {
